<resources>
    <string name="app_name">Lecturer Rating</string>
    <string name="txtRegister">Register</string>
    <string name="txtUsername">Username</string>
    <string name="txtEmail">Email</string>
    <string name="Password">Password</string>
    <string name="ReRegister">Confirm Password</string>
    <string name="HaveAccount">Already Have an Account?</string>
    <string name="Login">Login</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="DontHaveAccount">Don\'t Have an Account?</string>
    <string name="SignUP">Sign Up</string>
    <string name="Google">Google</string>
    <string name="Facebook">Facebook</string>
    <string name="editPhoto">Edit Photo</string>
    <string name="myRates">My Rates</string>
    <string name="MainPage">main page</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>