<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bb"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="135dp"
        android:layout_height="59dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/Login"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/et_name_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/txtUsername"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_register" />

    <EditText
        android:id="@+id/et_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_security"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/et_name_login"
        app:layout_constraintStart_toStartOf="@+id/et_name_login"
        app:layout_constraintTop_toBottomOf="@+id/et_name_login" />

    <TextView
        android:id="@+id/txt_forgot_password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ForgotPassword"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password_login" />

    <Button
        android:id="@+id/btn_Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/btn_bg"
        android:text="@string/Login"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/txt_forgot_password_login"
        app:layout_constraintStart_toStartOf="@+id/et_password_login"
        app:layout_constraintTop_toBottomOf="@+id/et_password_login" />

    <LinearLayout
        android:id="@+id/linear_layout_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/btn_Register"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="@+id/btn_Register"
        app:layout_constraintTop_toBottomOf="@+id/btn_Register">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/DontHaveAccount"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sign_up_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/SignUP"
            android:textColor="@color/Red"
            android:textSize="16sp" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_google"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/btn_bg"
        android:drawableStart="@drawable/ic_google"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:text="@string/Google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:icon="@drawable/ic_google"
        app:iconTintMode="multiply"
        app:layout_constraintEnd_toStartOf="@+id/btn_facebook"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_facebook" />

    <Button
        android:id="@+id/btn_facebook"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_bg"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:text="@string/Facebook"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:icon="@drawable/ic_facebook"
        app:iconTint="@color/blue_facebook"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_google" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="546dp" />


</androidx.constraintlayout.widget.ConstraintLayout>